# win32-modern-titlebar

./: CMakeLists.txt  LICENSE  README.md  build.bat
assets/: icon.excalidraw
src/: main.c
src/ui/: app.rc  color.c  color.h  events.c  events.h  file.c  file.h  font.c  font.h  menu.c  menu.h  resource.h  title_bar.c  title_bar.h  window.c  window.h
